@@ -33,6 +33,31 @@
 %  - If chatroom is password protected, ask password
 %  - If chatroom is only for members, ask for username and password
 
+%% Copied from mod_muc/mod_muc.erl
+-record(muc_online_room, {name_host, pid}).
+%% Copied from mod_muc/mod_muc_room.erl
+-define(MAX_USERS_DEFAULT, 200).
+-record(config, {title = "",
+		 description = "",
+		 allow_change_subj = true,
+		 allow_query_users = true,
+		 allow_private_messages = true,
+                 allow_visitor_status = true,
+                 allow_visitor_nickchange = true,
+		 public = true,
+		 public_list = true,
+		 persistent = false,
+		 moderated = true,
+		 members_by_default = true,
+		 members_only = false,
+		 allow_user_invites = false,
+		 password_protected = false,
+		 password = "",
+		 anonymous = true,
+		 max_users = ?MAX_USERS_DEFAULT,
+		 logging = false
+		}).
+
 
 %%%----------------------------------------------------------------------
 %%% REQUEST HANDLERS
@@ -86,29 +111,6 @@ fill(Num) -> io_lib:format("~p", [Num]).
 %%%----------------------------------------------------------------------
 %%% MUC INFO
 %%%----------------------------------------------------------------------
-
-% Copied from mod_muc/mod_muc.erl
--record(muc_online_room, {name_host, pid}).
-
-% Copied from mod_muc/mod_muc_room.erl
--define(MAX_USERS_DEFAULT, 200).
--record(config, {title = "",
-		 allow_change_subj = true,
-		 allow_query_users = true,
-		 allow_private_messages = true,
-		 public = true,
-		 public_list = true,
-		 persistent = false,
-		 moderated = true,
-		 members_by_default = true,
-		 members_only = false,
-		 allow_user_invites = false,
-		 password_protected = false,
-		 password = "",
-		 anonymous = true,
-		 max_users = ?MAX_USERS_DEFAULT,
-		 logging = false
-		}).
 
 get_room_pid(Name, Host) ->
 	case ets:lookup(muc_online_room, {Name, Host}) of
