@@ -1,3 +1,8 @@
+2008-09-30  Badlop  <badlop@process-one.net>
+
+	* src/mod_muc_admin.erl: Update record definitions to ejabberd
+	trunk SVN
+
 2008-05-16  Badlop  <badlop@process-one.net>
 
 	* src/mod_muc_admin.erl: New exported function
